name:                core
version:             0.5
-- synopsis:
-- description:
homepage:            https://github.com/Abhiroop/core#readme
license:             BSD3
license-file:        LICENSE
author:              David Himmelstrup
maintainer:          lemmih@gmail.com
copyright:           2017 David Himmelstrup
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Core
                     , Language.Core.Parser
                     , Language.Core.Pretty
                     , Language.Core.Syntax
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , parsec
                     , pretty
  default-language:    Haskell2010

executable core-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , core
  default-language:    Haskell2010

test-suite core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/core
